// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-button Borderless button 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--borderless"
    >
      Borderless button
    </button>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Default 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--secondary"
    >
      Hello, I am a button!
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary"
      href="https://ebay.com"
    >
      Hello, I am a link!
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Destructive variant 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--primary btn--destructive"
    >
      Primary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--primary fake-btn--destructive"
      href="https://ebay.com"
    >
      Primary Link
    </a>
  </p>
  <p>
    <button
      class="btn btn--secondary btn--destructive"
    >
      Secondary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary fake-btn--destructive"
      href="https://ebay.com"
    >
      Secondary Link
    </a>
  </p>
  <p>
    <button
      class="btn btn--tertiary btn--destructive"
    >
      Tertiary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--tertiary fake-btn--destructive"
      href="https://ebay.com"
    >
      Tertiary Link
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Disabled 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--primary"
      disabled=""
    >
      Primary Button
    </button>
  </p>
  <p>
    <button
      class="btn btn--secondary"
      disabled=""
    >
      Secondary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary"
    >
      Link
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Expand button 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--primary"
    >
      <span
        class="btn__cell"
      >
        <span
          class="btn__text"
        >
          Primary expand button
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--chevron-down-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
     
    <button
      aria-expanded="true"
      class="btn btn--primary"
    >
      <span
        class="btn__cell"
      >
        <span
          class="btn__text"
        >
          Expanded button
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--chevron-down-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
  </p>
  <p>
    <button
      class="btn btn--secondary"
    >
      <span
        class="btn__cell"
      >
        <span
          class="btn__text"
        >
          Expand button
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--chevron-down-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
  </p>
  <p>
    <button
      class="btn btn--tertiary"
    >
      <span
        class="btn__cell"
      >
        <span
          class="btn__text"
        >
          Tertiary expand button
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--chevron-down-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
  </p>
  <p>
    <button
      class="btn btn--form"
    >
      <span
        class="btn__cell"
      >
        <span
          class="btn__text"
        >
          Form expand button
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--chevron-down-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
     
    <button
      class="btn btn--form btn--slim"
    >
      <svg
        aria-hidden="true"
        class="icon icon--chevron-down-16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-chevron-down-16"
        />
      </svg>
    </button>
     
    <button
      aria-expanded="true"
      class="btn btn--form btn--slim"
    >
      <svg
        aria-hidden="true"
        class="icon icon--chevron-down-16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-chevron-down-16"
        />
      </svg>
    </button>
  </p>
  <p>
    <button
      class="btn btn--borderless"
    >
      <span
        class="btn__cell"
      >
        <span
          class="btn__text"
        >
          Borderless expand button
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--chevron-down-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Fixed height 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--secondary btn--fixed-height"
    >
      Fixed height button
    </button>
  </p>
  <p>
    <button
      class="btn btn--secondary btn--large btn--large-true"
    >
      Fixed height large button
    </button>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Flex Button 1`] = `
<DocumentFragment>
  <button
    class="btn btn--primary btn--fluid"
  >
    <span
      class="btn__cell"
      style="justify-content: space-between;"
    >
      <span>
        Select
      </span>
      <span
        style="display: inline-flex;"
      >
        <span>
          Any
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--chevron-down-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Fluid 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--primary btn--fluid"
    >
      Primary Button
    </button>
  </p>
  <p>
    <button
      class="btn btn--secondary btn--fluid"
    >
      Secondary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary fake-btn--fluid"
      href="https://www.ebay.com"
    >
      Link
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Form button 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--form"
    >
      Form button
    </button>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Icon Only 1`] = `
<DocumentFragment>
  <p>
    Form button:
    <br />
    <button
      aria-label="Menu button"
      class="btn btn--form btn--slim"
    >
      <svg
        aria-hidden="true"
        class="icon icon--menu-20"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-menu-20"
        />
      </svg>
    </button>
  </p>
  <p>
    Form fake-button (link):
    <br />
    <a
      aria-label="Settings link"
      class="fake-btn fake-btn--form fake-btn--slim"
      href="#"
    >
      <svg
        aria-hidden="true"
        class="icon icon--settings-16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-settings-16"
        />
      </svg>
    </a>
  </p>
  <p>
    Delete button:
    <br />
    <button
      aria-label="Destructive button"
      class="btn btn--secondary btn--destructive"
    >
      <svg
        aria-hidden="true"
        class="icon icon--delete-16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-delete-16"
        />
      </svg>
    </button>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Loading button 1`] = `
<DocumentFragment>
  <p>
    <button
      aria-live="polite"
      class="btn btn--secondary"
    >
      <span
        class="btn__cell"
      >
        <span
          aria-label="Busy"
          class="progress-spinner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class="icon icon--spinner-24"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-spinner-24"
            />
          </svg>
        </span>
      </span>
    </button>
  </p>
  <p>
    <button
      aria-live="polite"
      class="btn btn--primary"
    >
      <span
        class="btn__cell"
      >
        <span
          aria-label="Busy"
          class="progress-spinner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class="icon icon--spinner-24"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-spinner-24"
            />
          </svg>
        </span>
      </span>
    </button>
  </p>
  <p>
    <button
      aria-live="polite"
      class="btn btn--tertiary"
    >
      <span
        class="btn__cell"
      >
        <span
          aria-label="Busy"
          class="progress-spinner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class="icon icon--spinner-24"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-spinner-24"
            />
          </svg>
        </span>
      </span>
    </button>
  </p>
  <p>
    <button
      aria-live="polite"
      class="btn btn--form"
    >
      <span
        class="btn__cell"
      >
        <span
          aria-label="Busy"
          class="progress-spinner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class="icon icon--spinner-24"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-spinner-24"
            />
          </svg>
        </span>
      </span>
    </button>
  </p>
  <p>
    <button
      aria-live="polite"
      class="btn btn--secondary btn--destructive"
    >
      <span
        class="btn__cell"
      >
        <span
          aria-label="Busy"
          class="progress-spinner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class="icon icon--spinner-24"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-spinner-24"
            />
          </svg>
        </span>
      </span>
    </button>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Partially disabled Button 1`] = `
<DocumentFragment>
  <button
    aria-disabled="true"
    class="btn btn--primary"
  >
    Hello, I am a button!
  </button>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Priority 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--primary"
    >
      Primary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--primary"
      href="https://ebay.com"
    >
      Primary Link
    </a>
  </p>
  <p>
    <button
      class="btn btn--secondary"
    >
      Secondary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary"
      href="https://ebay.com"
    >
      Secondary Link
    </a>
  </p>
  <p>
    <button
      class="btn btn--secondary"
    >
      Secondary Button (Default)
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary"
      href="https://ebay.com"
    >
      Secondary Link (Default)
    </a>
  </p>
  <p>
    <button
      class="btn btn--tertiary"
    >
      Tertiary Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--tertiary"
      href="https://ebay.com"
    >
      Tertiary Link
    </a>
  </p>
  <p>
    <button
      class="btn"
    >
      Base Button
    </button>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Size 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--secondary btn--large"
    >
      Large Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary fake-btn--large"
      href="https://ebay.com"
    >
      Large Link
    </a>
  </p>
  <p>
    <button
      class="btn btn--secondary"
    >
      Default Size Button
    </button>
  </p>
  <p>
    <a
      class="fake-btn fake-btn--secondary"
      href="https://ebay.com"
    >
      Default Size Link
    </a>
  </p>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Split button 1`] = `
<DocumentFragment>
  <p>
    <button
      class="btn btn--primary btn--split-start"
    >
      Primary split start button
    </button>
    <button
      class="btn btn--primary btn--split-end"
    >
      Primary split end button
    </button>
  </p>
  <p>
    <button
      class="btn btn--secondary btn--split-start"
    >
      Split start button
    </button>
    <button
      class="btn btn--secondary btn--split-end"
    >
      Split end button
    </button>
  </p>
  <p>
    <button
      class="btn btn--tertiary btn--split-start"
    >
      Tertiary split start button
    </button>
    <button
      class="btn btn--tertiary btn--split-end"
    >
      Tertiary split end button
    </button>
  </p>
  <p>
    <button
      class="btn btn--primary btn--split-start"
    >
      Primary Split button
    </button>
    <button
      class="btn btn--primary btn--split-end"
    >
      <svg
        aria-hidden="true"
        class="icon icon--chevron-down-16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-chevron-down-16"
        />
      </svg>
    </button>
  </p>
  <p>
    <button
      class="btn btn--secondary btn--split-start"
    >
      Split button
    </button>
    <button
      class="btn btn--secondary btn--split-end"
    >
      <svg
        aria-hidden="true"
        class="icon icon--chevron-down-16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-chevron-down-16"
        />
      </svg>
    </button>
  </p>
  <p>
    <button
      class="btn btn--tertiary btn--split-start"
    >
      Tertiary split button
    </button>
    <button
      class="btn btn--tertiary btn--split-end"
    >
      <svg
        aria-hidden="true"
        class="icon icon--chevron-down-16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-chevron-down-16"
        />
      </svg>
    </button>
  </p>
          
</DocumentFragment>
`;

exports[`Storyshots ebay-button Transparent 1`] = `
<DocumentFragment>
  <div
    style="background: rgba(66, 214, 205, 0.5);"
  >
    <p>
      <button
        class="btn btn--secondary"
      >
        Default Button
      </button>
    </p>
    <p>
      <button
        class="btn btn--secondary btn--transparent"
      >
        Transparent Button
      </button>
    </p>
    <p>
      <button
        class="btn btn--secondary btn--destructive btn--transparent"
      >
        Transparent Destructive Button
      </button>
    </p>
    <p>
      <a
        class="fake-btn fake-btn--secondary fake-btn--transparent"
        href="https://ebay.com"
      >
        Transparent Link
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-button Truncated 1`] = `
<DocumentFragment>
  <div>
    <p>
      <button
        class="btn btn--secondary btn--truncated"
        style="max-width: 200px;"
      >
        Hello, I am a button! this is a long text
      </button>
    </p>
    <p>
      <button
        class="btn btn--secondary btn--large btn--truncated"
        style="max-width: 200px;"
      >
        Hello, I am a BIG button! this is a long text
      </button>
    </p>
    <p>
      <a
        class="fake-btn fake-btn--secondary fake-btn--truncated"
        href="https://ebay.com"
        style="max-width: 200px;"
      >
        Hello, I am a link! this is a long text
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-button With icon 1`] = `
<DocumentFragment>
  <p>
    Form button:
    <br />
    <button
      aria-label="Menu button"
      class="btn btn--secondary"
    >
      <svg
        aria-hidden="true"
        class="icon icon--menu-20"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-menu-20"
        />
      </svg>
      <span>
        Button with icon
      </span>
    </button>
  </p>
  <p>
    Form fake-button (link):
    <br />
    <a
      aria-label="Settings link"
      class="fake-btn fake-btn--form"
      href="#"
    >
      <svg
        aria-hidden="true"
        class="icon icon--settings-16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-settings-16"
        />
      </svg>
      <span>
        Button with icon
      </span>
    </a>
  </p>
  <p>
    Delete button:
    <br />
    <button
      aria-label="Destructive button"
      class="btn btn--secondary btn--destructive"
    >
      <svg
        aria-hidden="true"
        class="icon icon--delete-16"
        focusable="false"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-delete-16"
        />
      </svg>
      <span>
        Button with icon
      </span>
    </button>
  </p>
  <p>
    Expand button:
    <br />
    <button
      aria-label="Destructive button"
      class="btn btn--secondary"
    >
      <span
        class="btn__cell"
      >
        <span
          class="btn__text"
        >
          <svg
            aria-hidden="true"
            class="icon icon--settings-16"
            focusable="false"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-settings-16"
            />
          </svg>
          <span>
            Expand button
          </span>
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--chevron-down-16"
          focusable="false"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
  </p>
</DocumentFragment>
`;
